# config-driven-pyspark

./: LICENSE  README.md  pyproject.toml
src/config_driven_pyspark/: applicator.py  functioniser.py  utils.py
test/: conftest.py  test_applicator.py  test_functioniser.py  test_utils.py
