[project]
name = "config-driven-pyspark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim Yates", email = "timyates100@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyspark>=4.0.1",
    "pytest>=8.4.2",
]

[project.scripts]
config-driven-pyspark = "config_driven_pyspark:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = [
  "./src/config_driven_pyspark"
]
